apps/qbittorrent/envs/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: staging-rizexor-com-issuer
  name: qbittorrent-ingress
spec:
  rules:
    - host: 'staging.rizexor.com'
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name:  qbittorrent-svc
              port:
                number: 80
  tls:
  - hosts:
    - 'staging.rizexor.com'
    secretName: staging-rizexor-com-tls
